@@ -412,9 +412,9 @@ class TestContentMenu(ptc.PloneTestCase):
         self.folder.invokeFactory('Folder', 'f1')
         directlyProvides(self.folder.f1, INonStructuralFolder)
         items = self.menu.getMenuItems(self.folder.f1, self.request)
-        factoriesMenuItem = [i for i in items if i['extra']['id'] == 'plone-contentmenu-factories'][0]
-        self.assertEqual(factoriesMenuItem['action'], self.folder.absolute_url() + '/folder_factories')
-    
+        factoriesMenuItem = [i for i in items if i['extra']['id'] == 'plone-contentmenu-factories']
+        self.failIf(factoriesMenuItem)
+
     def testAddMenuWithSingleItemCollapses(self):
         # we need a dummy to test this - should test that if the item does not
         # support constrain types and there is 
