@@ -4,6 +4,11 @@ Changelog for plone.app.contentmenu
 
 plone.app.contentmenu - Unreleased
 
+    - Do not show the add item menu anymore on normal content, but just on
+      folderish and default pages. This closes
+      http://dev.plone.org/plone/ticket/6744.
+      [hannosch]
+
     - Fixed variable name in the label_item_selected message id. This closes
       http://dev.plone.org/plone/ticket/6584.
       [hannosch]
